# K_SpecPart_C

./: .gitignore  CMakeLists.txt  README.md  embedding.md  graphification.md  isolate_islands.md  overlay.md  partition.part  test_cpp.part  test_cpp_hint.part  tree_partition.md
include/kspecpart/: cut_distillation.hpp  definitions.hpp  embedding.hpp  exact_partitioner.hpp  external_tools.hpp  golden_evaluator.hpp  graphification.hpp  hypergraph.hpp  io.hpp  isolate_islands.hpp  julia_random.hpp  kspecpart.hpp  lapack_eigen.hpp  lsst.hpp  metis.hpp  optimal_partitioner.hpp  overlay.hpp  projection.hpp  specpart.hpp  tree_partition.hpp  triton_refiner.hpp
julia_ref_env/: Manifest.toml  Project.toml
scripts/: benchmark_partitioners.py  compare_cpp_julia.py  hmetis_wrapper.sh  julia_ilp_wrapper.sh  regression_cases.tsv  run_julia_specpart.jl  run_julia_specpart.sh
src/: cut_distillation.cpp  embedding.cpp  exact_partitioner.cpp  external_tools.cpp  golden_evaluator.cpp  graphification.cpp  hypergraph.cpp  io.cpp  isolate_islands.cpp  julia_random.cpp  lapack_eigen.cpp  lsst.cpp  main.cpp  metis.cpp  optimal_partitioner.cpp  overlay.cpp  projection.cpp  specpart.cpp  tree_partition.cpp  triton_refiner.cpp
